src/parser/snapshots/hebi4__parser__tests__tests__inputs__array.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Var(
            Ident(
                "empty",
            ),
            Array(
                [],
            ),
        ),
        Var(
            Ident(
                "single",
            ),
            Array(
                [
                    Int32(
                        0,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_tc",
            ),
            Array(
                [
                    Int32(
                        0,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi",
            ),
            Array(
                [
                    Int32(
                        0,
                    ),
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_tc",
            ),
            Array(
                [
                    Int32(
                        0,
                    ),
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                ],
            ),
        ),
    ],
)
