src/parser/snapshots/hebi4__parser__tests__tests__inputs__expr_if.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Var(
            Ident(
                "simple",
            ),
            IfSimple(
                Bool(
                    true,
                ),
                Some(
                    Block(
                        [
                            StmtExpr(
                                Prefix(
                                    Minus,
                                    Int32(
                                        1,
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
                [
                    StmtExpr(
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "ternary",
            ),
            IfSimple(
                Bool(
                    true,
                ),
                Some(
                    Block(
                        [
                            StmtExpr(
                                Int32(
                                    0,
                                ),
                            ),
                        ],
                    ),
                ),
                [
                    StmtExpr(
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_one",
            ),
            IfMulti(
                Some(
                    Block(
                        [
                            StmtExpr(
                                Prefix(
                                    Minus,
                                    Int32(
                                        1,
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
                [
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int32(
                                    0,
                                ),
                            ),
                        ],
                    ),
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int32(
                                    1,
                                ),
                            ),
                        ],
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "mutli_one_else",
            ),
            IfMulti(
                Some(
                    Block(
                        [
                            StmtExpr(
                                Int32(
                                    2,
                                ),
                            ),
                        ],
                    ),
                ),
                [
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int32(
                                    0,
                                ),
                            ),
                        ],
                    ),
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int32(
                                    1,
                                ),
                            ),
                        ],
                    ),
                ],
            ),
        ),
    ],
)
