src/parser/snapshots/hebi4__parser__tests__tests__inputs__expr_return2.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Return(
                Some(
                    Int32(
                        100,
                    ),
                ),
            ),
        ),
    ],
)
