src/parser/snapshots/hebi4__parser__tests__tests__inputs__fact.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        FuncDecl(
            Ident(
                "factorial",
            ),
            Block(
                [
                    StmtExpr(
                        IfSimple(
                            Infix(
                                Le,
                                GetVar(
                                    Ident(
                                        "n",
                                    ),
                                ),
                                Int32(
                                    1,
                                ),
                            ),
                            Some(
                                Block(
                                    [
                                        StmtExpr(
                                            Return(
                                                Some(
                                                    Infix(
                                                        Mul,
                                                        GetVar(
                                                            Ident(
                                                                "n",
                                                            ),
                                                        ),
                                                        Call(
                                                            GetVar(
                                                                Ident(
                                                                    "factorial",
                                                                ),
                                                            ),
                                                            [
                                                                Infix(
                                                                    Sub,
                                                                    GetVar(
                                                                        Ident(
                                                                            "n",
                                                                        ),
                                                                    ),
                                                                    Int32(
                                                                        1,
                                                                    ),
                                                                ),
                                                            ],
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                            [
                                StmtExpr(
                                    Return(
                                        Some(
                                            Int32(
                                                1,
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "n",
                ),
            ],
        ),
    ],
)
