src/parser/snapshots/hebi4__parser__tests__tests__inputs__function.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [],
            ),
            [],
        ),
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [],
            ),
            [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
        ),
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [],
            ),
            [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
        ),
    ],
)
