src/parser/snapshots/hebi4__parser__tests__tests__inputs__function_body.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [
                    StmtExpr(
                        Infix(
                            Add,
                            Int32(
                                1,
                            ),
                            Int32(
                                1,
                            ),
                        ),
                    ),
                ],
            ),
            [],
        ),
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [
                    StmtExpr(
                        Infix(
                            Add,
                            Int32(
                                1,
                            ),
                            Int32(
                                1,
                            ),
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
        ),
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [
                    StmtExpr(
                        Infix(
                            Add,
                            Int32(
                                1,
                            ),
                            Int32(
                                1,
                            ),
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
        ),
    ],
)
